Git Ignore buildconstants

--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,4 @@ ctre_sim/
 
 src/main/java/frc/robot/BuildConstants.java
 src/main/java/frc/robot/BuildConstants.java
+src/main/java/frc/robot/BuildConstants.java
