--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@
 
 # Log file
 *.log
+*.wpilog
 
 # BlueJ files
 *.ctxt
@@ -179,5 +180,7 @@ ctre_sim/
 
 
 src/main/java/frc/robot/BuildConstants.java
-src/main/java/frc/robot/BuildConstants.java
-src/main/java/frc/robot/BuildConstants.java
+simgui.json
+simgui-ds.json
+networktables.json.bck
+networktables.json
