--- a/build.gradle
+++ b/build.gradle
@@ -121,7 +121,11 @@ wpi.sim.addDriverstation()
 // in order to make them all available at runtime. Also adding the manifest so WPILib
 // knows where to look for our Robot Class.
 jar {
-    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+    from {
+        configurations.runtimeClasspath.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
     from sourceSets.main.allSource
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
@@ -137,37 +141,37 @@ tasks.withType(JavaCompile) {
     options.compilerArgs.add '-XDstringConcat=inline'
 }
 
-    project.compileJava.dependsOn(createVersionFile)
-    gversion {
-        srcDir       = "src/main/java/"
-        classPackage = "frc.robot"
-        className    = "BuildConstants"
-        dateFormat   = "yyyy-MM-dd HH:mm:ss z"
-        timeZone     = "MST" // Use preferred time zone
-        indent       = "  "
-    }
+project.compileJava.dependsOn(createVersionFile)
+gversion {
+    srcDir       = "src/main/java/"
+    classPackage = "frc.robot"
+    className    = "BuildConstants"
+    dateFormat   = "yyyy-MM-dd HH:mm:ss z"
+    timeZone     = "MST" // Use preferred time zone
+    indent       = "  "
+}
 
-    spotless {
-        java {
-            target fileTree('.') {
+spotless {
+    java {
+        target fileTree('.') {
 
-                include '**/*.java'
-                exclude '**/build/**', '**/build-*/**', '**/BuildConstants.java', '/bin/**'
-            }
-            toggleOffOn()
-            googleJavaFormat().aosp()
-            removeUnusedImports()
-            trimTrailingWhitespace()
-            endWithNewline()
+            include '**/*.java'
+            exclude '**/build/**', '**/build-*/**', '**/BuildConstants.java', '/bin/**'
         }
-        groovyGradle {
-            target fileTree('.') {
-                include '**/*.gradle'
-                exclude '**/build/**', '**/build-*/**'
-            }
-            greclipse()
-            indentWithSpaces(4)
-            trimTrailingWhitespace()
-            endWithNewline()
-        }
+        toggleOffOn()
+        googleJavaFormat().aosp()
+        removeUnusedImports()
+        trimTrailingWhitespace()
+        endWithNewline()
     }
+    groovyGradle {
+        target fileTree('.') {
+            include '**/*.gradle'
+            exclude '**/build/**', '**/build-*/**'
+        }
+        greclipse()
+        indentWithSpaces(4)
+        trimTrailingWhitespace()
+        endWithNewline()
+    }
+}
